[package]
name = "blue"
version = "0.0.1"
description = "An extensive unified bluetooth library"
license = "WTFPL"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"
build = "build.rs"

[dependencies]

[dependencies.winapi]
version = "0.3.6"
features = ["winsock2", "errhandlingapi", "handleapi"]
